# nycitibike-data-transform

./: .gitignore  Dockerfile  README.md  invoke.go  main-notes.tf  notes.md  pyproject.toml  setup_script.sh
dbt/nycitibike_transform/: .user.yml  Dockerfile  dbt_project.yml  invoke.go  profiles.yml  setup_script.sh
ref/: 1_SRC___AUX_NYC_DEMOGRAPHIC|data_nyc_econ_by_nta.csv  1_SRC___AUX_NYC_DEMOGRAPHIC|data_nyc_housing_by_nta.csv  1_SRC___AUX_NYC_DEMOGRAPHIC|data_nyc_social_by_nta.csv  1_SRC___AUX_NYC_DEMOGRAPHIC|dict_nyc_econ_by_nta.csv  1_SRC___AUX_NYC_DEMOGRAPHIC|dict_nyc_housing_by_nta.csv  1_SRC___AUX_NYC_DEMOGRAPHIC|dict_nyc_housing_units_by_nta.csv  1_SRC___AUX_NYC_DEMOGRAPHIC|dict_nyc_social_by_nta.csv  1_SRC___AUX_NYC_LEGAL|dict_nyc_evictions.csv  1_SRC___AUX_NYC_RESTAURANT|dict_nyc_restaurant_inspections.csv  2_DIM___AUX_NYC|nyc_nta_zones.parquet  nyc_social_data_by_nta.xlsx  xlsx_housing_units_by_nta_data_dict.xlsx  xlsx_nyc_decennialcensusdata_2010_2020_nta.xlsx  xlsx_nyc_econ_data_by_nta.xlsx  xlsx_nyc_housing_data_nta.xlsx  xlsx_nyc_social_data_by_nta.xlsx  xlsx_restaurant_inspection_data_dictionary.xlsx  ~$nyc_decennialcensusdata_2010_2020_nta.xlsx
terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars  tf_script.sh  variables.tf
terraform/a1_config_initial_apply/: .terraform.lock.hcl  main.tf
terraform/a2_config_second_apply/: .terraform.lock.hcl  main.tf
terraform/main_tf_drafts/: main.tf  main2-2023.06.03.md
terraform_test/: .terraform.lock.hcl  main.tf  terraform.tfvars  variables.tf
tests/: dbt_project.yml  profiles.yml
(+10 files in other folders)
